--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,11 @@ body {
     height: 100%;
 }
 
+.logo {
+    margin: 20px;
+    width: 70%;
+}
+
 .appName {
     text-align: center;
     font-size: 2.4rem;
@@ -21,10 +26,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-
-.logo {
-    width: 70%;
 }
 
 .containerMain {
@@ -48,7 +49,7 @@ body {
     font-size: 1.5rem;
     font-weight: bold;
     color: #65a5b3;
-    padding: 10px;
+    margin-bottom: 20px;
 }
 
 .inputText, .outputText {
@@ -58,7 +59,7 @@ body {
     font-size: 1.0rem;
     font-weight: bold;
     width: 80%;
-    height: 30rem;
+    height: 25rem;
     padding-top: 10px;
     border-radius: 2%;
     box-shadow: 1px 1px 5px 1px #65a5b3;
@@ -78,7 +79,7 @@ body {
 .btn {
     background-color: #fff;
     border: 1px solid #65a5b3;
-    margin: 10px;
+    margin-top: 20px;
     padding: 20px;
     border-radius: 24px;
     transition: .5s;
@@ -120,11 +121,12 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 0;
 }
 
 .social li {
     list-style: none;
-    margin: 0 20px;
+    padding: 10px;
 }
 
 .social img {
@@ -147,6 +149,7 @@ body {
         font-size: 25px;
         font-weight: 800;
         color: #65a5b3;
+        margin: 0;
     }
 
     .containerMain {
@@ -159,6 +162,7 @@ body {
         display: flex;
         justify-content: center;
         align-items: center;
+        height: 260px;
     }
 
     .inputText, .outputText {
@@ -166,16 +170,32 @@ body {
         height: 150px;
     }
 
+    .outputArea .labelText {
+        margin-top: 30px;
+    }
+
+    .buttonsArea {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
     .btn {
-        width: 150px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 15px;
+        width: 140px;
+        height: 30px;
     }
 
     .containerFooter {
         display: flex;
         flex-direction: column;
+        align-items: center;
+    }
+
+    .author p {
+        font-size: 17px;
     }
 }
-  
-/* @media only screen and (max-height: 400px) {
-
-} */
